tests/compile_fail/declare_scheduler_config_file_def_arity_one.stderr
error: declare_scheduler!: `config_file_def` must be a 2-tuple of string literals (`(arg_template, guest_path)`), got 1-tuple.
 --> tests/compile_fail/declare_scheduler_config_file_def_arity_one.rs:8:23
  |
8 |     config_file_def = ("only-one",),
  |                       ^^^^^^^^^^^^^
